--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1,12 +1,52 @@
-body {
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
 
-	width: 100%;
-	height: 100vh;
-	
-	.canvas {
-		width: 100%;
-		height: 100%;
-		background-color: #007EDC;
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
 	}
 }
 
+
+body {
+	--rows: 0;
+	--columns: 0;
+	--block-size: 2rem;
+
+	width: 100%;
+	height: 100vh;
+
+	overflow: hidden;
+
+	background-color: rgb(0 0 0 / 10%);
+
+	display: grid;
+	grid-template-rows: repeat(var(--rows), 1fr);
+	grid-template-columns: repeat(var(--columns), 1fr);
+
+	user-select: none;
+	
+	.block {
+		width: var(--block-size);
+		aspect-ratio: 1;
+
+		border: 1px solid rgb(255 255 255 / 10%);
+		transition: background-color 1000ms ease-in-out;
+		background-color: #0d4b9b;
+
+		&:hover {
+			transition-duration: 0ms;
+
+			background-color: #83ade3;
+		}
+	}
+}
