--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -18,35 +18,61 @@
 
 
 body {
-	--rows: 0;
-	--columns: 0;
-	--block-size: 2rem;
 
 	width: 100%;
 	height: 100vh;
 
 	overflow: hidden;
 
-	background-color: rgb(0 0 0 / 10%);
-
-	display: grid;
-	grid-template-rows: repeat(var(--rows), 1fr);
-	grid-template-columns: repeat(var(--columns), 1fr);
-
-	user-select: none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	
-	.block {
-		width: var(--block-size);
-		aspect-ratio: 1;
+	.container {
+		--rows: 0;
+		--columns: 0;
+		--block-size: 1rem;
 
-		border: 1px solid rgb(255 255 255 / 10%);
-		transition: background-color 1000ms ease-in-out;
-		background-color: #0d4b9b;
+		width: 100%;
+		height: 100%;
+		position: absolute;
 
-		&:hover {
-			transition-duration: 0ms;
+		display: grid;
+		grid-template-rows: repeat(var(--rows), 1fr);
+		grid-template-columns: repeat(var(--columns), 1fr);
+	
+		user-select: none;
 
-			background-color: #83ade3;
+		.block {
+			width: var(--block-size);
+			aspect-ratio: 1;
+	
+			border: 1px solid rgb(255 255 255 / 1%);
+			transition: background-color 1000ms ease-in-out;
+			background-color: #0d4b9b;
+	
+			&.hover,
+			&:hover {
+				transition-duration: 0ms;
+	
+				background-color: #83ade3;
+			}
+	
+			&.dirt {
+				background-color: #4B9A5A;
+			}
 		}
+	}
+
+	.options {
+
+		position: absolute;
+		bottom: 5%;
+		width: 50%;
+		height: 20%;
+		background-color: rgb(0 0 0 / 50%);
+		z-index: 100;
+		border-radius: 2rem;
+
 	}
 }
